# idcom-on-chain-identity-gateway

safecoin/gatekeeper-lib/: aranote.txt  package.json
safecoin/gatekeeper-lib/scripts/: addGatekeeper.ts  buildIssueAndSendGatewayToken.ts  buildIssueRefreshTransactions.ts  issueGatewayToken.ts  issueGatewayTokenWithNonce.ts  issueGatewayTokenWithOwnerSigns.ts  refreshGatewayTokenWithOwnerSigns.ts  sendSerializedGatewayTokenTx.ts  testGatewayTokenExpiry.ts  testGatewayTokenStates.ts
safecoin/gatekeeper-lib/src/commands/: add-gatekeeper.ts  freeze.ts  issue.ts  network-feature.ts  refresh.ts  revoke-gatekeeper.ts  revoke.ts  unfreeze.ts  verify.ts
safecoin/gatekeeper-lib/src/service/: gatekeeper-network-service.ts  gatekeeper-service.ts
safecoin/gatekeeper-lib/src/util/: account.ts  connection.ts  constants.ts  token.ts  transaction.ts
safecoin/gatekeeper-lib/test/: gatekeeper-service.test.ts
safecoin/gateway-ts/: package.json
safecoin/gateway-ts/docs/: index.html
safecoin/gateway-ts/docs/classes/: Active.html  AssignablePublicKey.html  Frozen.html  GatewayInstruction.html  GatewayToken.html  GatewayTokenData.html  GatewayTokenState.html  NetworkFeature.html  Revoked.html  UserTokenExpiry.html
safecoin/gateway-ts/docs/enums/: State.html
safecoin/gateway-ts/scripts/: findGatewayTokens.ts  getGatekeeperAccount.ts
safecoin/gateway-ts/src/lib/: AssignablePublicKey.ts  GatewayTokenData.ts  (+3 more)
safecoin/gateway-ts/test/: constatnts.ts
safecoin/integration-lib/: Cargo.toml
safecoin/integration-lib/src/: borsh.rs  error.rs  instruction.rs  lib.rs  networks.rs  state.rs
safecoin/program/: Cargo.toml
safecoin/program/cli/: Cargo.toml
safecoin/program/cli/src/: lib.rs
safecoin/program/src/: error.rs  lib.rs  processor.rs  state.rs
safecoin/program/tests/: compile_test.rs  functional.rs  gateway_context.rs
(+9 files in other folders)
