[package]
name = "safecoin-gateway-program"
version = "0.1.2"
description = "OCIV Gateway Program"
authors = ["Daniel Kelleher <daniel@identity.com>"]
repository = "https://github.com/identity-com/on-chain-identity-gateway"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = { path = "../../../Safecoin/sdk/program" }
safecoin-gateway = { path = "../integration-lib" }
thiserror = "1.0"
zeroize = "=1.3.0"

[dev-dependencies]
safecoin-program-test = { path = "../../../Safecoin/program-test" }
safecoin-sdk = { path = "../../../Safecoin/sdk" }
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
